--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://github.com/abdelaziz-sekouti/my-reacat-vite-app/",
   "name": "my-reacat-vite-app",
   "private": true,
   "version": "0.0.0",
