committing homepage modif

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/my-reacat-vite-app/",
+  "homepage": "http://abdelaziz-sekouti.github.io/my-reacat-vite-app/",
   "name": "my-reacat-vite-app",
   "private": true,
   "version": "0.0.0",
