--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://github.com/abdelaziz-sekouti/my_react_vite_app/",
-  "name": "my-reacat-vite-app",
+  "homepage": "https://abdelaziz-sekouti.github.io/my_react_vite_app/",
+  "name": "my_react_vite_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
